fixed spacing on search form

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -73,5 +73,12 @@ $link-color: #005580;
   }
 }
 
-
+#search-form {
+  .span7 {
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid;
+    border-color: $highlight-color;
+  }
+}
 
